--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 body {
   font-size: 16px;
   color: white ;/*#fff*/
-  background-color: blue; /*#61122f;   #f6b319*/
+  background-color: grey; /*#61122f;   #f6b319*/
   font-family: 'Oxygen', sans-serif;
 }
 
